--- a/src/components/logo/logo.component.scss
+++ b/src/components/logo/logo.component.scss
@@ -1,3 +1,8 @@
+#Layer_1 {
+  width: 400px;
+  height: 400px;
+}
+
 .st0 {
   stroke-dasharray: 3200;
   stroke-dashoffset: 3200;
